@@ -121,6 +121,7 @@ my $builder = $class->new(
                 'Class::Load'                     => 0,
                 'Class::Std'                      => '0.0.8',
                 'ClearPress'                      => '>= 473.3.3',
+                'Config::Any'                     => 0,
                 'Config::Auto'                    => 0,
                 'Crypt::CBC'                      => 0,
                 'Cwd'                             => 0,
@@ -216,6 +217,7 @@ my $builder = $class->new(
                 'XML::Generator'                  => '1.01',
                 'XML::LibXML'                     => '1.70',
                 'YAML'                            => '0.68',
+                'YAML::XS'                        => 0,
 
                 'WTSI::DNAP::Utilities::Loggable'  => '>= 0.5.3',
                 'WTSI::DNAP::Utilities::Timestamp' => '0',
